# landaunet

./: CMakeLists.txt  README.md  movie_notebook.ipynb  pyproject.toml  scimlproj.ipynb
math/: calc.nb
src/: main.cc  solver.h
src/landaunet/: geom.py
